syntax = "proto3";

option go_package = "./pb";

package pb;

//model
message Homestay {
    int64   id = 1;
    string  title = 2;
    string  subTitle = 3;
    string  banner = 4;
    string  info = 5;
    int64   peopleNum = 6;            //容纳人的数量
    int64   homestayBusinessId = 7;   //店铺id
    int64   userId = 8;               //房东id
    int64   rowState = 9;             //0:下架 1:上架
    int64   rowType = 10;             //售卖类型0：按房间出售 1:按人次出售
    string  foodInfo = 11;            //餐食标准
    int64   foodPrice = 12;           //餐食价格(分)
    int64   homestayPrice = 13;       //民宿价格(分)
    int64   marketHomestayPrice = 14; //民宿市场价格(分)
}

message HomestayBusinessBoss {
    int64 id = 1;
    int64 userId = 2;
    string nickname = 3;
    string avatar = 4;
    string info = 5;
    int64 rank = 6;
}

message HomestayBusiness {
    int64 id = 1;
    string title = 2;
    string info = 3;
    string tags = 4;
    string cover = 5;
    double star = 6;
    string headerImg = 7;
}

//req 、resp
message HomestayDetailReq {
    int64 id = 1;
}
message HomestayDetailResp {
    Homestay homestay = 1;
}

message HomestayListReq {
    int64 page = 1;
    int64 pageSize = 2;
}
message HomestayListResp {
    repeated Homestay list = 1;
}

message GuessListReq{}
message GuessListResp{
    repeated Homestay list = 1;
}

message BusinessListReq{
    int64 lastId = 1;
    int64 pageSize = 2;
    int64 homestayBusinessId = 3;
}
message BusinessListResp{
    repeated Homestay list = 1;
}

message GoodBossReq{}
message GoodBossResp{
    repeated HomestayBusinessBoss list = 1;
}

message HomestayBusinessDetailReq{
    int64 id = 1;
}
message HomestayBusinessDetailResp{
    HomestayBusinessBoss boss = 1;
}

message HomestayBusinessListReq{
    int64 lastId = 1;
    int64 pageSize = 2;
}
message HomestayBusinessListResp{
    repeated HomestayBusiness list = 1;
}

//service
service travel {
    // homestay
    rpc homestayDetail(HomestayDetailReq) returns(HomestayDetailResp);
    rpc homestayList(HomestayListReq) returns(HomestayListResp);
    rpc guessList(GuessListReq) returns(GuessListResp);
    rpc businessList(BusinessListReq) returns(BusinessListResp);

    // homestay business
    rpc goodBoss(GoodBossReq) returns(GoodBossResp);
    rpc homestayBusinessDetail(HomestayBusinessDetailReq) returns(HomestayBusinessDetailResp);
    rpc homestayBusinessList(HomestayBusinessListReq) returns(HomestayBusinessListResp);
}

// app/travel/cmd/rpc
// goctl rpc protoc ./pb/travel.proto --go_out=. --go-grpc_out=. --zrpc_out=./
